# rpg-character-system

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md  RPGCharacterSystem.vcxproj  RPGCharacterSystem.vcxproj.filters
data/: abilities.json  class_stat_progression.json  class_stats.json  xp_table.json
include/: Ability.h  AbilityFactory.h  Character.h  CharacterFactory.h  Class.h  ClassFactory.h  Enums.h  JsonUtils.h
src/: Ability.cpp  AbilityFactory.cpp  Character.cpp  CharacterFactory.cpp  Class.cpp  ClassFactory.cpp  JsonUtils.cpp
x64/Debug/: RPGCharacterSystem.exe.recipe
